# dealii-matrixfree-hanging-nodes

./: CMakeLists.txt  README.md  benchmark.cc  benchmark.h  benchmark_00_likwid.cc  benchmark_01.cc  benchmark_01.h  benchmark_01_likwid.cc  benchmark_02.cc  benchmark_03.cc  benchmark_03.h  constraint_helper.h  evaluation_kernels.h  info_01.cc  main-likwid.cc  main.cc  main2.cc  main3.cc  vmult.cc
cuda/: CMakeLists.txt  benchmark_03.cu  run.sh
experiments/: run-exp1-likwid.sh  run-exp1.sh  run-exp2.sh  run-exp3-a.sh  run-exp3-b.sh  run-exp4.sh
experiments-amd/: generate_files.py  run-exp1.sh
experiments-skx/: generate_files.json  generate_files.py  run-exp1.sh  run-exp3-a.sh  run-exp3-b.sh  run-exp4-a.sh  run-exp4-b.sh  run-exp5.sh
include/: cell_weights.h  operator_performance.h
